SVN
-------------------------------

Gen:   Resolved issue CASTOR-1827 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved part sof XSList code into new XSNMTokens and XSIdrefs classes.
       Details: http://jira.codehaus.org/browse/CASTOR-1827
       (Werner - 20070115)

XML:   Resolved issue CASTOR-1837 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix small Java 1.3 regressions in XML code
       Details: http://jira.codehaus.org/browse/CASTOR-1837
       (Edward - 20070114)

CTF:   Resolved issue CASTOR-1832 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix minor inaccuracies in CTF
       Details: http://jira.codehaus.org/browse/CASTOR-1832
       (Edward - 20070113)

CTF:   Resolved issue CASTOR-1831 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove Adaptx from Castor; add new implementation of xmldiff for CTF
       Details: http://jira.codehaus.org/browse/CASTOR-1831
       (Edward - 20070113)

Gen:   Resolved issue CASTOR-1829 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fully qualified references to java.lang.Object in CollectionInfo.createRemobeByIndexMethod().
       Details: http://jira.codehaus.org/browse/CASTOR-1829
       (Edward - 20070112)

JDO:   Resolved issue CASTOR-1817 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up Java 5 build complaints in ddlgen
       Details: http://jira.codehaus.org/browse/CASTOR-1817
       (Edward - 20070108)

Doc:   Resolved issue CASTOR-1816 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup on ddlgen properties doc
       Details: http://jira.codehaus.org/browse/CASTOR-1816
       (Edward - 20070108)

XML:   Resolved issue CASTOR-1813 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Refactored org.exolab.castor.builder.types package.
       Details: http://jira.codehaus.org/browse/CASTOR-1813